# curllib

./: .gitmodules  CMakeLists.txt
include/: http.h  url_parser.h
src/: platform.h
